@@ -3,6 +3,7 @@ v1.11.8:
  - BUG FIX: fix panic when detect DNS over TLS traffic
  - Deprecated: the following config options are deprecated:
      - emit_duration in statsd config, use emit_interval instead
+     - untrusted_read_limit in server config, use untrusted_read_speed_limit instead
 
 v1.11.7:
  - BUG FIX: fix read of H2 zero size body frame
